fix: fix checkbox color in dark mode

--- a/src/UI/Checkboxes/checkboxes.scss
+++ b/src/UI/Checkboxes/checkboxes.scss
@@ -29,4 +29,7 @@
       grid-template-columns: 1fr;
     }
   }
+  .dark-checkbox {
+    background-color: transparent;
+  }
 }
